Spacing issue with default WP shit

--- a/dev/sass/base-element-styles/modules/objects/_hero.scss
+++ b/dev/sass/base-element-styles/modules/objects/_hero.scss
@@ -23,10 +23,10 @@
     top: 0;
     left: 0;
   }
-  &.dark{
+  .content.dark{
     color: $white;
   }
-  &.light{
+  .content.light{
     color: $black;
   }
 }
